--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/lodash": "^4.14.119",
     "clean-webpack-plugin": "^1.0.0",
     "css-loader": "^2.0.0",
     "express": "^4.16.4",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^0.23.1",
+    "typescript": "^3.2.2",
     "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-middleware": "^3.4.0",
@@ -29,6 +31,7 @@
   },
   "dependencies": {
     "lodash": "^4.17.11",
+    "ts-loader": "^5.3.2",
     "uglifyjs-webpack-plugin": "^2.1.0",
     "uuid": "^3.3.2",
     "webpack-manifest-plugin": "^2.0.4"
